syntax = "proto3";

option csharp_namespace = "Shared.Protos";

package register_account;

// The greeting service definition.
service RegisterAccount {
  // Sends a greeting
  rpc Register (RegisterAccountRequest) returns (RegisterAccountReply);
}

// The request message containing the user's name.
message RegisterAccountRequest {
  string username = 1;
  string password = 2;
}

// The response message containing the greetings.
message RegisterAccountReply {
  uint32 infoCode = 1;
}